fixed diagnosis issue and added filters, pair programmed with Anthony